--- a/src/index.css
+++ b/src/index.css
@@ -32,8 +32,6 @@ html,body,div,span,h1,h3,ul,li {
 
 @media only screen and (min-width: 300px) and (max-width: 440px) {
 
-
-
   /* Basic Styles */
 
   html, body {
@@ -249,43 +247,48 @@ html,body,div,span,h1,h3,ul,li {
 
 @media only screen and (min-width: 768px) and (max-width: 959px) {
 
-
   /* Basic Styles */
-
   html, body {
-    -webkit-font-smoothing:antialiased;
-    -webkit-text-size-adjust:100%;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-size-adjust: 100%;
     background-color: black;
-    color:#C8C7C8;
+    color: #C8C7C8;
     width: 100%;
     height: 100%;
     margin: 0;
     font-family: Cheltenham, Georgia;
-    font-weight:700;
+    font-weight: 700;
   }
+
   * {
-    -webkit-tap-highlight-color:rgba(0,0,0,0);
-    -webkit-tap-highlight-color:transparent;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-tap-highlight-color: transparent;
   }
 
   img {
     max-width: 75px;
     max-height: 75px;
   }
-  /* Typography */
 
-  h1, h3 { color: #ffffff; font-weight: 500; margin: 0 auto; }
+  /* Typography */
+  h1, h3 {
+    color: #ffffff;
+    font-weight: 500;
+    margin: 0 auto;
+  }
 
   h1 {
     text-align: center;
     margin: 0;
     font-weight: 700;
   }
+
   h3 {
     line-height: 44px;
     font-size: 38px;
     width: 100%;
   }
+
   p {
     text-align: left;
     font-size: 14px;
@@ -295,30 +298,36 @@ html,body,div,span,h1,h3,ul,li {
   }
 
   /* CSS Transitions */
-
-  
   .moto {
-	visibility:hidden;
+    visibility: hidden;
     position: absolute;
     text-align: left;
     font-weight: 500;
     font-size: 20px;
     margin-left: 1%;
     color: #3E3E3E;
-    opacity:0;
+    opacity: 0;
 
-  }  
+  }
+
   * {
-    -moz-transition:all 100ms ease;
-    -o-transition:all 100ms ease;
-    -webkit-transition:all 100ms ease;
-    transition:all 100ms ease;
+    -moz-transition: all 100ms ease;
+    -o-transition: all 100ms ease;
+    -webkit-transition: all 100ms ease;
+    transition: all 100ms ease;
   }
 
   /* Highlight Styles */
-  ::selection { background-color:#262223; color:#444; }
-  ::-moz-selection { background-color:#262223; color:#444; }
-  
+  ::selection {
+    background-color: #262223;
+    color: #444;
+  }
+
+  ::-moz-selection {
+    background-color: #262223;
+    color: #444;
+  }
+
   .app {
     margin: 0 auto;
     width: 60%;
@@ -332,10 +341,9 @@ html,body,div,span,h1,h3,ul,li {
   }
 
   /* Player */
-
   .player {
     background-color: #090909;
-    font-family: Cheltenham ,Georgia;
+    font-family: Cheltenham, Georgia;
     margin: 0 auto 10%;
     width: 100%;
     height: 10%;
@@ -343,14 +351,16 @@ html,body,div,span,h1,h3,ul,li {
   }
 
   .player h3 {
-    padding: 1% 0 5% 0;
+    padding: .2% 0 1.5% 0;
     text-align: center;
     overflow: hidden;
 
   }
+
   .player p {
     text-align: center;
   }
+
   /* Button state */
   .player button {
     margin: 1.5% auto 1.5%;
@@ -358,26 +368,27 @@ html,body,div,span,h1,h3,ul,li {
   }
 
   .play {
-    height:80px;
-    width:80px;
+    height: 80px;
+    width: 80px;
     background: url("../assets/play-icon-300.png");
     background-size: 100%;
     background-position: center;
     border-radius: 50%;
-    -moz-border-radius: 5%0;
+    -moz-border-radius: 5% 0;
     -webkit-border-radius: 50%;
     border: 2px solid white;
     cursor: pointer;
 
   }
+
   .paused {
-    height:80px;
-    width:80px;
+    height: 80px;
+    width: 80px;
     background: url("../assets/paused-button.png");
     background-size: 100%;
     background-position: center;
     border-radius: 50%;
-    -moz-border-radius: 5%0;
+    -moz-border-radius: 5% 0;
     -webkit-border-radius: 50%;
     border: 2px solid white;
     cursor: pointer;
@@ -385,12 +396,12 @@ html,body,div,span,h1,h3,ul,li {
 
   .player button:active {
     /*background-color: #231F20;*/
-    transform: scale(1.05);
+    transform: scale(1.1);
   }
 
   /* Article List */
   .article-list {
-    align-text:left;
+    align-text: left;
     -webkit-columns: 1;
     -moz-columns: 1;
     columns: 1;
@@ -408,7 +419,6 @@ html,body,div,span,h1,h3,ul,li {
   }
 
   /* Article List Item */
-
   .list-item {
     background-color: #090909;
     display: inline-block;
@@ -417,6 +427,7 @@ html,body,div,span,h1,h3,ul,li {
     width: 100%;
 
   }
+
   .list-item h3 {
     text-align: left;
     font-size: 34px;
@@ -424,16 +435,15 @@ html,body,div,span,h1,h3,ul,li {
     padding: 5% 2.5% 5% 2.5%;
   }
 
-  .list-item:active {
+  .list-item:hover {
     background-color: #181818;
-    transform: scale(1.025);
+    transform: scale(1.05);
   }
 }
-
 /* ---------------------- Smaller Desktop ----------------------- */
 
 @media only screen and (min-width: 960px)  and (max-width: 1024px){
-  
+
   /* Basic Styles */
 
   html, body {
@@ -509,8 +519,8 @@ html,body,div,span,h1,h3,ul,li {
 	overflow: auto;
     text-align: left;
     font-weight: 700;
-    font-size: 60px;
-    margin-left: 1.5%;
+    font-size: 56px;
+    margin-left: 1%;
     color: #3E3E3E;
     opacity:0;
 		
@@ -786,6 +796,7 @@ html,body,div,span,h1,h3,ul,li {
     margin-left: 2.5%;
   }
 
+  
   /* CSS Transitions */
   @-webkit-keyframes fadeIn { 0% { opacity:0; } 50% { opacity:1; } 80% { opacity: 0;} 100% { opacity: 0;} };
   @-moz-keyframes fadeIn { 0% { opacity:0; } 50% { opacity:1; } 80% { opacity: 0;} 100% { opacity: 0;} };
@@ -798,14 +809,14 @@ html,body,div,span,h1,h3,ul,li {
 
   .moto {
     position: absolute;
-	overflow: auto;
+	  overflow: auto;
     text-align: left;
     font-weight: 500;
     font-size: 90px;
     margin-left: 4%;
     color: #3E3E3E;
     opacity:0;
-	font-style: bold;
+	  font-style: bold;
 
     -webkit-animation:fadeIn ease-in 1;
     -moz-animation:fadeIn ease-in 1;
@@ -831,11 +842,11 @@ html,body,div,span,h1,h3,ul,li {
     -webkit-animation-delay: .62s;
     -moz-animation-delay:.62s;
     animation-delay: .62s;
-    padding: 20.5% 0 0 0;
+    padding: 22.5% 0 0 0;
   }
 
   .app img {
-	background:rgba(0,0,0,.5);
+	  background:rgba(0,0,0,.5);
     opacity: 0;
     -webkit-animation:title ease-in 1;
     -moz-animation:title ease-in 1;
@@ -874,10 +885,10 @@ html,body,div,span,h1,h3,ul,li {
   }
 
   * {
-  -moz-transition:all 200ms ease;
-  -o-transition:all 200ms ease;
-  -webkit-transition:all 200ms ease;
-  transition:all 200ms ease;
+    -moz-transition:all 200ms ease;
+    -o-transition:all 200ms ease;
+    -webkit-transition:all 200ms ease;
+    transition:all 200ms ease;
   }
 
   /* Highlight Styles */
